fixed broken images in apps.html

--- a/apps.html
+++ b/apps.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <html>
 <head>
 <title>website_final</title>
@@ -112,14 +111,14 @@ div.bjbox{
 	<div class="website-final-03">
 		<div class="bjbox">
 			<h1 style="text-align: center">Black Jack App</h1>
-			<img src="portfolio/apps/blackjack01.png" width="350"/>
-			<img src="portfolio/apps/blackjack02.png" width="350" />
+			<img src="images/blackjack01.gif" width="350" alt="" />
+			<img src="images/blackjack02.gif" width="350" alt="" />
 		</div>
 		<div class="dndbox">
 			<h1 style="text-align: center">D&D Name Generator App</h1>
-			<img src="portfolio/apps/dnd01.jpg" height="360"/>
-			<img src="portfolio/apps/dnd02.jpg" height="360"/>
-			<img src="portfolio/apps/dnd03.jpg" height="360" />
+			<img src="images/dnd01.gif" height="360" alt="" />
+			<img src="images/dnd02.gif" height="360" alt="" />
+			<img src="images/dnd03.gif" height="360" alt="" />
 		</div>
 	</div>
 	<div class="website-final-04">
@@ -251,14 +250,14 @@ div.bjbox{
 	<div class="website-final-03">
 		<div class="bjbox">
 			<h1 style="text-align: center">Black Jack App</h1>
-			<img src="portfolio/apps/blackjack01.png" width="350"/>
-			<img src="portfolio/apps/blackjack02.png" width="350" />
+			<img src="images/blackjack01.gif" width="350" alt="" />
+			<img src="images/blackjack02.gif" width="350" alt="" />
 		</div>
 		<div class="dndbox">
 			<h1 style="text-align: center">D&D Name Generator App</h1>
-			<img src="portfolio/apps/dnd01.jpg" height="360"/>
-			<img src="portfolio/apps/dnd02.jpg" height="360"/>
-			<img src="portfolio/apps/dnd03.jpg" height="360" />
+			<img src="images/dnd01.gif" height="360" alt="" />
+			<img src="images/dnd02.gif" height="360" alt="" />
+			<img src="images/dnd03.gif" height="360" alt="" />
 		</div>
 	</div>
 	<div class="website-final-04">
@@ -276,5 +275,4 @@ div.bjbox{
 </div>
 <!-- End Save for Web Slices -->
 </body>
->>>>>>> 5e562846770e538a1c97513020df86d3354d6a8d
 </html>
