added a folder to put videos

--- a/animation.html
+++ b/animation.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <html>
 <head>
 <title>website_final</title>
@@ -112,12 +111,12 @@ div.video02{
 <h1 style="text-align: center">Sneaking Animation</h1>
       <div class="video01">
 		<video width="500" height="300" title="sneaking" controls="controls" loop="loop" >
-        <source src="portfolio/animation/sneaking-anim.mp4" type="video/mp4">
+        <source src="videos/sneaking-anim.mp4" type="video/mp4">
       </video>
 	</div>
 	<div class="video02">
       <video width="500" height="300" controls="controls" loop="loop" >
-        <source src="portfolio/animation/sneaking-anim-front.mp4" type="video/mp4">
+        <source src="videos/sneaking-anim-front.mp4" type="video/mp4">
       </video> 
 	</div>
   </div>
@@ -274,5 +273,4 @@ div.video02{
 </div>
 <!-- End Save for Web Slices -->
 </body>
->>>>>>> 5e562846770e538a1c97513020df86d3354d6a8d
 </html>
