--- a/apps.html
+++ b/apps.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- Save for Web Styles (website_final.psd) -->
 <style type="text/css">
-<!--
+
 
 div.Table_01 {
 	position:absolute;
@@ -84,7 +84,7 @@ div.dndbox{
 	top:0;
 	left:550;
 	width:550;
-	height:450;	
+	height:400;	
 }
 
 div.bjbox{
@@ -92,10 +92,10 @@ div.bjbox{
 	top:0;
 	left:50;
 	width:350;
-	height:400;
+	height:300;
 }
 
--->
+
 </style>
 <!-- End Save for Web Styles -->
 </head>
@@ -110,151 +110,12 @@ div.bjbox{
 	</div>
 	<div class="website-final-03">
 		<div class="bjbox">
-			<h1 style="text-align: center">Black Jack App</h1>
+			<h1 style="text-align: center; margin-top: 0">Black Jack App</h1>
 			<img src="images/blackjack01.gif" width="350" alt="" />
 			<img src="images/blackjack02.gif" width="350" alt="" />
 		</div>
 		<div class="dndbox">
-			<h1 style="text-align: center">D&D Name Generator App</h1>
-			<img src="images/dnd01.gif" height="360" alt="" />
-			<img src="images/dnd02.gif" height="360" alt="" />
-			<img src="images/dnd03.gif" height="360" alt="" />
-		</div>
-	</div>
-	<div class="website-final-04">
-		<img src="images/website_final_04.gif" width="111" height="489" alt="" />
-	</div>
-	<div class="website-final-05">
-		<img src="images/website_final_05.gif" width="1144" height="54" alt="" />
-	</div>
-	<div class="website-final-06">
-		<img src="images/website_final_06.gif" alt="" width="1366" height="166" usemap="#Map" border="0" />
-        <map name="Map"><area shape="rect" coords="1074,70,1265,127" href="index.html">
-          <area shape="rect" coords="102,72,293,129" href="resume.html">
-        </map>
-	</div>
-</div>
-<!-- End Save for Web Slices -->
-</body>
-=======
-<html>
-<head>
-<title>website_final</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<!-- Save for Web Styles (website_final.psd) -->
-<style type="text/css">
-<!--
-
-div.Table_01 {
-	position:absolute;
-	left:0px;
-	top:0px;
-	width:1366px;
-	height:768px;
-}
-
-div.website-final-01 {
-	position:absolute;
-	left:0px;
-	top:0px;
-	width:1366px;
-	height:113px;
-}
-
-div.website-final-02 {
-	position:absolute;
-	left:0px;
-	top:113px;
-	width:111px;
-	height:489px;
-}
-
-div.website-final-03 {
-	background-image: url("images/website-layout_03.gif");
-	position:absolute;
-	left:111px;
-	top:113px;
-	width:1144px;
-	height:435px;
-}
-
-div.website-final-04 {
-	position:absolute;
-	left:1255px;
-	top:113px;
-	width:111px;
-	height:489px;
-}
-
-div.website-final-05 {
-	position:absolute;
-	left:111px;
-	top:548px;
-	width:1144px;
-	height:54px;
-}
-
-div.website-final-06 {
-	position:absolute;
-	left:0px;
-	top:602px;
-	width:1366px;
-	height:166px;
-}
-	
-div.resume-layout1{
-	position:absolute;
-	top:20;
-	left:25;
-	width:300;
-	height:400;
-}
-	
-div.resume-layout2{
-	position:absolute;
-	top:20;
-	left:350;
-	width:300;
-	height:400;
-}
-
-div.dndbox{
-	position:absolute;
-	top:0;
-	left:550;
-	width:550;
-	height:450;	
-}
-
-div.bjbox{
-	position:absolute;
-	top:0;
-	left:50;
-	width:350;
-	height:400;
-}
-
--->
-</style>
-<!-- End Save for Web Styles -->
-</head>
-<body style="background-color:#FFFFFF; margin-top: 0px; margin-bottom: 0px; margin-left: 0px; margin-right: 0px;">
-<!-- Save for Web Slices (website_final.psd) -->
-<div class="Table_01">
-	<div class="website-final-01">
-		<img src="images/website_final_01.gif" width="1366" height="113" alt="" />
-	</div>
-	<div class="website-final-02">
-		<img src="images/website_final_02.gif" width="111" height="489" alt="" />
-	</div>
-	<div class="website-final-03">
-		<div class="bjbox">
-			<h1 style="text-align: center">Black Jack App</h1>
-			<img src="images/blackjack01.gif" width="350" alt="" />
-			<img src="images/blackjack02.gif" width="350" alt="" />
-		</div>
-		<div class="dndbox">
-			<h1 style="text-align: center">D&D Name Generator App</h1>
+			<h1 style="text-align: center; margin-top: 0">DnD Name Generator App</h1>
 			<img src="images/dnd01.gif" height="360" alt="" />
 			<img src="images/dnd02.gif" height="360" alt="" />
 			<img src="images/dnd03.gif" height="360" alt="" />
