--- a/3dmodels.html
+++ b/3dmodels.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <html>
 <head>
 <title>website_final</title>
@@ -77,120 +76,23 @@ div.resume-layout2{
 	top:20;
 	left:350;
 	width:300;
-	height:400;
+	height:350;
 }
 
--->
-</style>
-<!-- End Save for Web Styles -->
-</head>
-<body style="background-color:#FFFFFF; margin-top: 0px; margin-bottom: 0px; margin-left: 0px; margin-right: 0px;">
-<!-- Save for Web Slices (website_final.psd) -->
-<div class="Table_01">
-	<div class="website-final-01">
-		<img src="images/website_final_01.gif" width="1366" height="113" alt="" />
-	</div>
-	<div class="website-final-02">
-		<img src="images/website_final_02.gif" width="111" height="489" alt="" />
-	</div>
-	<div class="website-final-03">
-		
-	</div>
-	<div class="website-final-04">
-		<img src="images/website_final_04.gif" width="111" height="489" alt="" />
-	</div>
-	<div class="website-final-05">
-		<img src="images/website_final_05.gif" width="1144" height="54" alt="" />
-	</div>
-	<div class="website-final-06">
-		<img src="images/website_final_06.gif" alt="" width="1366" height="166" usemap="#Map" border="0" />
-        <map name="Map"><area shape="rect" coords="1074,70,1265,127" href="index.html">
-          <area shape="rect" coords="102,72,293,129" href="resume.html">
-        </map>
-	</div>
-</div>
-<!-- End Save for Web Slices -->
-</body>
-=======
-<html>
-<head>
-<title>website_final</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<!-- Save for Web Styles (website_final.psd) -->
-<style type="text/css">
-<!--
-
-div.Table_01 {
+div.video{
 	position:absolute;
-	left:0px;
-	top:0px;
-	width:1366px;
-	height:768px;
-}
-
-div.website-final-01 {
-	position:absolute;
-	left:0px;
-	top:0px;
-	width:1366px;
-	height:113px;
-}
-
-div.website-final-02 {
-	position:absolute;
-	left:0px;
-	top:113px;
-	width:111px;
-	height:489px;
-}
-
-div.website-final-03 {
-	background-image: url("images/website-layout_03.gif");
-	position:absolute;
-	left:111px;
-	top:113px;
-	width:1144px;
-	height:435px;
-}
-
-div.website-final-04 {
-	position:absolute;
-	left:1255px;
-	top:113px;
-	width:111px;
-	height:489px;
-}
-
-div.website-final-05 {
-	position:absolute;
-	left:111px;
-	top:548px;
-	width:1144px;
-	height:54px;
-}
-
-div.website-final-06 {
-	position:absolute;
-	left:0px;
-	top:602px;
-	width:1366px;
-	height:166px;
-}
-	
-div.resume-layout1{
-	position:absolute;
-	top:20;
+	top:10;
 	left:25;
-	width:300;
-	height:400;
+	width:500;
+	height:400;	
 }
-	
-div.resume-layout2{
-	position:absolute;
-	top:20;
-	left:350;
-	width:300;
-	height:400;
+
+div.record{
+    position: absolute;
+    top: 12px;
+    left: 603px;
+    width: 501px;
+    height: 350px;
 }
 
 -->
@@ -207,7 +109,16 @@ div.resume-layout2{
 		<img src="images/website_final_02.gif" width="111" height="489" alt="" />
 	</div>
 	<div class="website-final-03">
-		
+		<div class="video">
+			<h1 style="text-align: center">Alien Robot</h1>
+			<video width="500" height="300" title="sneaking" controls="controls" loop="loop" >
+        		<source src="videos/Final Robot Alien.mp4" type="video/mp4">
+      		</video>
+		</div>
+		<div class="record">
+			<h1 style="text-align: center">Record Player</h1>
+			<img src="images/record-player.gif" height="300"/>
+		</div>
 	</div>
 	<div class="website-final-04">
 		<img src="images/website_final_04.gif" width="111" height="489" alt="" />
@@ -224,5 +135,4 @@ div.resume-layout2{
 </div>
 <!-- End Save for Web Slices -->
 </body>
->>>>>>> 5e562846770e538a1c97513020df86d3354d6a8d
 </html>
