created index.html and added some pictures/text

--- a/index.html
+++ b/index.html
@@ -64,20 +64,44 @@ div.website-final-06 {
 	height:166px;
 }
 	
-div.resume-layout1{
+div.text-box1{
 	position:absolute;
-	top:20;
-	left:25;
-	width:300;
-	height:400;
+	top:60;
+	left:10;
+	width:220;
+	height:370;
+	padding-left: 10px;
+	padding-right:10px;
 }
 	
-div.resume-layout2{
+div.text-box2{
 	position:absolute;
-	top:20;
-	left:350;
-	width:300;
-	height:400;
+	top:60;
+	left:280;
+	width:230;
+	height:370;
+	padding-left: 15px;
+	padding-right:10px;
+}
+	
+div.text-box3{
+	position:absolute;
+	top:60;
+	left:580;
+	width:230;
+	height:370;
+	padding-left: 15px;
+	padding-right:10px;
+}
+
+div.text-box4{
+	position:absolute;
+	top:60;
+	left:880;
+	width:230;
+	height:370;
+	padding-left: 15px;
+	padding-right:10px;
 }
 
 -->
@@ -94,7 +118,21 @@ div.resume-layout2{
 		<img src="images/website_final_02.gif" width="111" height="489" alt="" />
 	</div>
 	<div class="website-final-03">
+		<h1 style="text-align: center; margin-top: 0; color:#b78636">Hobbies</h1>
+		<div style="border:1px solid #b78636" class="text-box1">
+			<h3>I Love the outdoors. One of my favorite hobbies include snowboarding.</h3>
+			<img  src="images/snowboarding.gif" />
+		</div>
+		<div style="border:1px solid #b78636" class="text-box2">
+			<h3>After snowboarding, I like curling up with a book and something warm to drink.</h3>
+			<img src="images/bookncoffee.gif" />
+		</div>
+		<div style="border:1px solid #b78636" class="text-box3">
 		
+		</div>
+		<div style="border:1px solid #b78636" class="text-box4">
+		
+		</div>
 	</div>
 	<div class="website-final-04">
 		<img src="images/website_final_04.gif" width="111" height="489" alt="" />
