added image links to resume.html

--- a/resume.html
+++ b/resume.html
@@ -102,10 +102,10 @@ div.menu{
 	</div>
 	<div class="website-final-03">
 		<div class="resume-layout1"> 
-			<img src="images/resume01.gif" width="330" height="430"/>
+			<a href="https://people.emich.edu/rrayford/images/resume01.gif"><img src="images/resume01.gif" width="330" height="430"/></a>
 		</div>
 		<div class="resume-layout2"> 
-			<img src="images/resume02.gif" width="330" height="430"/>
+			<a href="https://people.emich.edu/rrayford/images/resume02.gif"><img src="images/resume02.gif" width="330" height="430"/></a>
 		</div>
 		<div class="menu"> 
 			<img src="images/menu.gif" width="300" height="400" usemap="#Map2" border="0"/>
